[project]
name = "orakulo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.14",
    "langchain>=0.3.14",
    "streamlit>=1.41.1",
    "langchain-groq>=0.2.3",
    "langchain-openai>=0.3.1",
    "python-dotenv>=1.0.1",
    "bs4>=0.0.2",
    "pypdf>=5.1.0",
    "unstructured>=0.16.14",
    "fake-useragent>=2.0.3",
    "youtube-transcript-api>=0.6.3",
]
